@@ -1,3 +1,8 @@
+2005-01-05  Bruno Haible  <bruno@clisp.org>
+
+	* format.lisp (next-arg): Signal a TYPE-ERROR when the argument list is
+	dotted.
+
 2005-01-02  Bruno Haible  <bruno@clisp.org>
 
 	Fix SHOW-STACK to show invocation activation at the right place, not
